conditions.Conditions.scala.code
if (estFaceMur() is true {
  droite();
  droite();
  avance();
}
else {
  avance();
  
}